# worldofclaw

./: .env  .env.example  .env.local  .gitignore  HANDOVER-2026-03-24.md  README.md  create.html  index.html  join.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  railway.json  render.yaml  requirements.txt  server.js  skills.md  tsconfig.base.json  tsconfig.json  vercel.json
api/: index.js  index.js.bak.1774234938
assets/: index-CZy7EQrb.css  index-DrLSgd77.js  index-localfix-v2.js  index-localfix-v4.js
backend/: __init__.py  main.py
config/: actions.yaml  decision_rules.yaml  ledger_schema.yaml
docs/: API_MAPPING.md  API_QUICKSTART.md  DEV_PLAN_V0.2_V0.3.md  PRD-ClawWorld-App.md  RAILWAY_DEPLOY.md  ROADMAP.md  SYSTEM_BLUEPRINT.md  WORLD_RULES.md  WORLD_RULES_V0.2.md  alpha-launch-checklist.md  alpha-operator-runbook.md  backend-implementation-breakdown.md  database-schema-mapping.md  env.md  final-delivery-summary.md  frontend-redesign-brief.md  frontend-redesign-handoff.md  frontend-refactor-notes.md  local-run.md  m1-m12-revision.md  online-smoke-deploy.md  runtime_decision_state_machine.md  system-boundaries.md  telegram-setup.md  telegram_protocol.md  version-history.json  versioning.md
drizzle/: config.ts  relations.ts  schema.ts
runbooks/: incident.md  launch.md  oncall.md  rollback.md  smoke-test.md
scripts/: alpha-seed.ts  alpha-smoke.ts  hourly_report.sh  version-history.js
seed/: facilities.seed.json  map.seed.json  routes.seed.json  sectors.seed.json  world.seed.json
server/: docker-compose.yml  index.js  package.json  (+2 more)
(+349 files in other folders)
